force-app/main/default/objects/External_System_Method__mdt/External_System_Method__mdt.object-meta.xml
<CustomObject>
    <label>External System Method</label>
    <pluralLabel>External System Methods</pluralLabel>
</CustomObject>