force-app/main/default/objects/External_System_Method__mdt/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <label>External System</label>
    <referenceTo>External_System__mdt</referenceTo>
    <relationshipLabel>Methods</relationshipLabel>
    <relationshipName>External_System_Methods</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>